--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ pool:
 jobs:
   - job: buildImage
     variables:
-      ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
+      ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
         imageTag: stable
       ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/develop') }}:
         imageTag: alpha
